--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "dependencies": {
     "body-parser": "~1.15.0",
     "express": "~4.13.3",
-    "express-x-hub": "^1.0.4"
+    "express-x-hub": "^1.0.4",
+    "properties": "^1.2.1",
+    "watson-developer-cloud": "^2.27.0"
   },
   "engines": {
     "node": "0.12.7"
