--- a/package.json
+++ b/package.json
@@ -5,9 +5,12 @@
   "main": "index.js",
   "dependencies": {
     "body-parser": "^1.17.1",
+    "config": "^1.25.1",
     "ejs": "^2.5.6",
     "express": "^4.15.2",
-    "express-x-hub": "^1.0.4"
+    "express-x-hub": "^1.0.4",
+    "properties": "^1.2.1",
+    "watson-developer-cloud": "^2.27.0"
   },
   "devDependencies": {},
   "scripts": {
